<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarCode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fullname">Họ và tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="email">Địa chỉ email</string>
    <string name="btnGenerator">Generator</string>
    <string name="read">Read</string>
    <string name="save">Save To SDCard</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="capture">Capture QR Code</string>

</resources>
