<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtFullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fullname" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFullName"
        android:layout_below="@+id/txtFullName"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPhoneNumber"
        android:layout_below="@+id/txtPhoneNumber"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnGenerator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="generatorBarCode"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_below="@+id/txtEmail"
        android:text="@string/btnGenerator" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveToSDCard"
        android:layout_alignTop="@+id/btnGenerator"
        android:layout_toRightOf="@+id/btnGenerator"
        android:text="@string/save" />

    <ImageView
        android:id="@+id/imgBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGenerator"
        android:layout_below="@+id/btnGenerator"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

</RelativeLayout>
